<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ApkStudio</string>
    <string name="guide_title">Инструкция</string>
    <string name="subtitle">Декомпилятор / компилятор APK</string>
    <string name="apk_label">APK для распаковки (папка apks/)</string>
    <string name="proj_label">Проект для сборки (папка input_apk/)</string>
    <string name="to_smali">В SMALI + XML</string>
    <string name="to_java">В JAVA</string>
    <string name="build_apk">СОБРАТЬ APK</string>
    <string name="refresh">Обновить</string>
    <string name="guide">Инструкция</string>
</resources>
